ADD ROUTE + API PARAMETER (INSERT, UPDATE, DELETE), DATA SAMPELS (GETDATASAMPELALL, GETDATASAMPELBYID)
